--- a/core/templates/core/add_pet.html
+++ b/core/templates/core/add_pet.html
@@ -1,13 +1,41 @@
 {% extends 'core/base.html' %}
 
+{% block title %}Add Pet - Dog Booking System{% endblock %}
+
 {% block content %}
-<h1>Add a Pet</h1>
+<div class="form-container">
+    <h1>Add a New Pet</h1>
+    <p class="form-help">Add your pet's information below. Your pet will need to be approved by our team before you can
+        book appointments.</p>
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
-</form>
+    <form method="post">
+        {% csrf_token %}
 
-<a href="{% url 'client_dashboard' %}">Back to Dashboard</a>
+        <div class="form-group">
+            <label for="{{ form.name.id_for_label }}" class="form-label">Pet Name:</label>
+            {{ form.name|add_class:"form-control" }}
+        </div>
+
+        <div class="form-group">
+            <label for="{{ form.breed.id_for_label }}" class="form-label">Breed:</label>
+            {{ form.breed|add_class:"form-control" }}
+        </div>
+
+        <div class="form-group">
+            <label for="{{ form.date_of_birth.id_for_label }}" class="form-label">Date of Birth:</label>
+            {{ form.date_of_birth|add_class:"form-control" }}
+        </div>
+
+        <div class="form-group">
+            <label for="{{ form.grooming_preferences.id_for_label }}" class="form-label">Grooming Preferences:</label>
+            {{ form.grooming_preferences|add_class:"form-control textarea" }}
+            <div class="form-help">Any special requirements or preferences for your pet's grooming</div>
+        </div>
+
+        <div style="display: flex; gap: 1rem;">
+            <button type="submit" class="btn btn-success">Submit Pet for Approval</button>
+            <a href="{% url 'client_dashboard' %}" class="btn btn-secondary">Cancel</a>
+        </div>
+    </form>
+</div>
 {% endblock %}
