--- a/core/templates/core/approve_pets.html
+++ b/core/templates/core/approve_pets.html
@@ -1,5 +1,6 @@
 {% extends 'core/base.html' %}
 {% load static %}
+{% load widget_tweaks %}
 
 {% block title %}Approve Pets - Dog Booking System{% endblock %}
 
