--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -14,7 +14,10 @@
     {% if user.is_authenticated %}
     <header class="header">
         <div class="header-container">
-            <a href="{% url 'redirect_by_role' %}" class="logo">🐕 Dog Booking System</a>
+            <a href="{% url 'redirect_by_role' %}" class="logo">
+                <!-- <img src="" alt="Riverdog Studio Logo" class="logo-image"> -->
+                Riverdog Studio
+            </a>
             <div class="user-info">
                 <div class="user-details">
                     Welcome, <strong>{{ user.get_full_name|default:user.username }}</strong>
